--- a/main.html
+++ b/main.html
@@ -10,7 +10,16 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<ol>
+		<li data-ns-test="shoppingList">Suit</li>
+		<li data-ns-test="shoppingList">Cane</li>
+		<li data-ns-test="shoppingList">Watch</li>
+	</ol>
+    <ul>
+		<li data-ns-test="holidayList">Jaipur</li>
+		<li data-ns-test="holidayList">Badrinath</li>
+		<li data-ns-test="holidayList">Vishnuvdevi</li>
+	</ul>
 </body>
 
 </html>
